--- a/apps/faa/package.json
+++ b/apps/faa/package.json
@@ -17,7 +17,12 @@
   },
   "homepage": "https://github.com/StoyanD/faa-info",
   "dependencies": {
-
-    "alexa-app-server": "^2.2.4"
+    "alexa-app": "^2.3.4",
+    "alexa-app-server": "^2.2.4",
+    "chai": "^3.5.0",
+    "chai-as-promised": "^5.3.0",
+    "lodash": "^4.13.1",
+    "mocha": "^2.5.3",
+    "request-promise": "^3.0.0"
   }
 }
