--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "get airport info, bigNerdRanch tutorial",
   "main": "index.js",
    "scripts": {
-      "start": "index.js"
+      "start": "mocha index.js"
   },
   "author": "CW",
   "license": "ISC",
